--- a/index.html
+++ b/index.html
@@ -371,7 +371,32 @@
         </tbody>
     </table>
 
-    <script src="script.js"></script>
+    <script src="script.js">
+         const boxes = document.querySelectorAll('.box');
+        const imagePreview = document.querySelector('.image-preview');
+
+        if (boxes.length > 0 && imagePreview) {
+            imagePreview.style.backgroundImage = `url(${boxes[0].dataset.image})`;
+        }
+
+        boxes.forEach(box => {
+            box.addEventListener('mouseenter', () => {
+                updateImagePreview(box);
+            });
+
+            box.addEventListener('touchstart', (e) => {
+                e.preventDefault();
+                updateImagePreview(box);
+            });
+        });
+
+        function updateImagePreview(box) {
+            const imageUrl = box.dataset.image;
+            if (imagePreview && imageUrl) {
+                imagePreview.style.backgroundImage = `url(${imageUrl})`;
+            }
+        }
+    </script>
 
 
 </body>
