--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </tr>
                 <tr>
                     <td style=" border: 2px solid white; padding:  0px  5px;"> indstndrd </td>
-                    <td style=" border: 2px solid white; padding:  0px  5px;"><a href="indstndrd.com" style="text-decoration: none; color: #7f7f7f;">indstndrd.com</a></td>
+                    <td style=" border: 2px solid white; padding:  0px  5px;"><a href="https://indstndrd.com" style="text-decoration: none; color: #7f7f7f;">indstndrd.com</a></td>
                 </tr>
             </table>
             </p>
