--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab Studio</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" type="lab-icon" href="/Lab-Studio-Tab.png" >
+    
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="shortcut icon" type="lab-icon" href="./Lab-Studio-Tab.png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
     <!-- Sintony Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
