--- a/index.html
+++ b/index.html
@@ -223,6 +223,41 @@
                     </p>
                 </td>
             </tr>
+            <!-- STACKS-->
+             <tr>
+                <td width="33%" style="border-left: none; border-right: none">
+                    <div class="project-gallery">
+                        <div class="gallery-container">
+                            <div class="gallery-images">
+                                <img class="gallery-image active" src="https://res.cloudinary.com/djmffrvpg/image/upload/v1738957869/Stacks-One_jbp099.png" alt="Stacks-1">
+                                <img class="gallery-image" src="https://res.cloudinary.com/djmffrvpg/image/upload/v1738957869/Stacks-Two_bir5ul.png" alt="Stacks-2">
+                                <img class="gallery-image" src="https://res.cloudinary.com/djmffrvpg/image/upload/v1738957869/Stacks-Three_surnd3.png" alt="Stacks-3">
+                                <img class="gallery-image" src="https://res.cloudinary.com/djmffrvpg/image/upload/v1738957868/Stacks-Four_kvrgcx.png" alt="Stacks-4">
+                                <img class="gallery-image" src="https://res.cloudinary.com/djmffrvpg/image/upload/v1738957868/Stacks-Five_k7st0c.png" alt="Stacks-5">
+                            </div>
+                            <button class="gallery-nav prev-btn" onclick="moveSlide(-1, this)">❮</button>
+                            <button class="gallery-nav next-btn" onclick="moveSlide(1, this)">❯</button>
+                            <div class="gallery-dots"></div>
+                        </div>
+                    </div>
+                </td>
+                <td width="25%" style="border-left: none; border-right: none;">
+                    <p style="margin-top: -75px; font-size: 12px; font-weight: 550; font-family: sintony;">
+                        Merchandise for STACKS 
+                        <p style="font-size: 12px; font-weight: 550; color: #7f7f7f; opacity: 75%;  font-family: sintony;">STACKS </p> 
+                    </p>
+                </td>
+                <td width="21%" style="border-left: none; border-right: none;">
+                    <p style="margin-top: -75px; font-size: 12px; font-weight: 550;  font-family: sintony;">
+                        Logo & Apparel Design 
+                    </p>
+                </td>
+                <td width="21%" style="border-left: none; border-right: none;">
+                    <p style="margin-top: -75px; font-size: 12px; font-weight: 550;">
+                        Jan 2025
+                    </p>
+                </td>
+            </tr>
             <!-- Project Two -->
             <tr>
                 <td width="33%" style="border-left: none; border-right: none">
