--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lola's lab</title>
+    <title>omolola</title>
     <!-- Webpage Icon -->
     <link rel="shortcut icon" type="lab-icon" href="https://res.cloudinary.com/dio49rnxg/image/upload/v1746990745/omolola_icon_48x48_n7nz8l.png" >
     <link rel="stylesheet" href="styles.css">
